Fixed horizontal scroll problem Fixed search box problem

--- a/www/css/components.css
+++ b/www/css/components.css
@@ -1,4 +1,11 @@
 /*************************
+***  CSS for content   ***
+*************************/
+#content {
+    overflow-x: hidden;
+}
+
+/*************************
 *** CSS for search box ***
 *************************/
 input {
