--- a/www/css/master.css
+++ b/www/css/master.css
@@ -117,7 +117,7 @@ article {
 
     #headerSearch {
         margin-top: 7px;
-        margin-right: 130px;
+        margin-right: -10px;
     }
 }
 
@@ -133,7 +133,7 @@ article {
 
     #headerSearch {
         margin-top: 5px;
-        margin-right: 85px;
+        /* margin-right: 85px; */
     }
 }
 
